[gd_scene load_steps=2 format=3 uid="uid://bqbb77w018hnv"]

[ext_resource type="Script" uid="uid://b18g3b8rfcfl7" path="res://menus/game_ui/game_ui.gd" id="1_2rou7"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2rou7")

[node name="VBoxContainerL" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 166.0
offset_bottom = 406.0
alignment = 1

[node name="VBoxContainerR" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 986.0
offset_top = -3.0
offset_right = 1152.0
offset_bottom = 403.0
alignment = 1
